--- a/index.html
+++ b/index.html
@@ -2,45 +2,127 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Register</title>
+  <title>Chat Room</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h2>Register</h2>
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <button id="registerBtn">Register</button>
-    <p id="message"></p>
-    <p>Already have an account? <a href="login.html">Login</a></p>
+    <h2>Welcome, <span id="userEmail"></span>!</h2>
+
+    <!-- Chat -->
+    <textarea id="messageInput" placeholder="Type your message..."></textarea>
+    <button id="sendMessage">Send</button>
+    <div id="messages"></div>
+
+    <!-- Add Friend -->
+    <hr />
+    <input type="email" id="friendEmail" placeholder="Add friend by email" />
+    <button id="addFriendBtn">Add Friend</button>
+    <p id="friendMsg"></p>
+    <h3>Your Friends</h3>
+    <ul id="friendList"></ul>
+
+    <button id="logoutBtn">Logout</button>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getFirestore, collection, addDoc, getDocs, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    const firebaseConfig = { apiKey: "AIzaSyBiNKDXds9IWjFAwSbJaNN8Zd37Wujk5Kc",
+    const firebaseConfig = { apiKey: "AIzaSyBiNKDXds9IWjFAwSbJaNN8Zd37Wujk5Kc", 
                              authDomain: "grid-walker-project.firebaseapp.com", 
-                             projectId: "grid-walker-project", 
+                             projectId: "grid-walker-project",
                              appId: "grid walker project"
                            };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const db = getFirestore(app);
 
-    document.getElementById("registerBtn").onclick = async () => {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const message = document.getElementById("message");
+    const messageInput = document.getElementById("messageInput");
+    const sendBtn = document.getElementById("sendMessage");
+    const messageBox = document.getElementById("messages");
+    const logoutBtn = document.getElementById("logoutBtn");
+    const userEmailSpan = document.getElementById("userEmail");
 
-      try {
-        await createUserWithEmailAndPassword(auth, email, password);
-        message.textContent = "✅ Registered successfully!";
-        window.location.href = "index.html";
-      } catch (error) {
-        message.textContent = "❌ " + error.message;
+    const friendInput = document.getElementById("friendEmail");
+    const friendMsg = document.getElementById("friendMsg");
+    const friendList = document.getElementById("friendList");
+    const addFriendBtn = document.getElementById("addFriendBtn");
+
+    let currentUser = null;
+
+    onAuthStateChanged(auth, async (user) => {
+      if (user) {
+        currentUser = user;
+        userEmailSpan.textContent = user.email;
+        await setDoc(doc(db, "users", user.email), { email: user.email }, { merge: true });
+        loadMessages();
+        loadFriends();
+      } else {
+        window.location.href = "login.html";
       }
+    });
+
+    sendBtn.onclick = async () => {
+      const text = messageInput.value.trim();
+      if (!text) return;
+      await addDoc(collection(db, "messages"), {
+        user: currentUser.email,
+        message: text,
+        timestamp: Date.now()
+      });
+      messageInput.value = "";
+      loadMessages();
     };
+
+    async function loadMessages() {
+      const messages = await getDocs(collection(db, "messages"));
+      const sorted = [];
+      messages.forEach(doc => sorted.push(doc.data()));
+      sorted.sort((a, b) => b.timestamp - a.timestamp);
+      messageBox.innerHTML = sorted.map(m =>
+        `<div class="feedback-item"><strong>@${m.user}:</strong><br>${m.message}</div>`
+      ).join("");
+    }
+
+    logoutBtn.onclick = () => {
+      signOut(auth);
+    };
+
+    addFriendBtn.onclick = async () => {
+      const email = friendInput.value.trim();
+      if (!email || email === currentUser.email) {
+        friendMsg.textContent = "Invalid friend email.";
+        return;
+      }
+
+      const userDoc = await getDoc(doc(db, "users", email));
+      if (!userDoc.exists()) {
+        friendMsg.textContent = "User not found.";
+        return;
+      }
+
+      await setDoc(doc(db, "friends", currentUser.email), {
+        [email]: true
+      }, { merge: true });
+
+      friendMsg.textContent = "Friend added!";
+      friendInput.value = "";
+      loadFriends();
+    };
+
+    async function loadFriends() {
+      const docRef = doc(db, "friends", currentUser.email);
+      const docSnap = await getDoc(docRef);
+      if (!docSnap.exists()) {
+        friendList.innerHTML = "<li>No friends yet.</li>";
+        return;
+      }
+      const data = docSnap.data();
+      friendList.innerHTML = Object.keys(data).map(email => `<li>${email}</li>`).join("");
+    }
   </script>
 </body>
 </html>
