--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Welcome, <span id="userEmail"></span>!</h2>
+    <h2>Welcome, <span id="userName"></span>!</h2>
 
     <!-- Chat -->
     <textarea id="messageInput" placeholder="Type your message..."></textarea>
@@ -28,51 +28,58 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getFirestore, collection, addDoc, getDocs, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getFirestore, collection, addDoc, getDocs, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    const firebaseConfig = { apiKey: "AIzaSyBiNKDXds9IWjFAwSbJaNN8Zd37Wujk5Kc", 
+    const firebaseConfig = { apiKey: "AIzaSyBiNKDXds9IWjFAwSbJaNN8Zd37Wujk5Kc",
                              authDomain: "grid-walker-project.firebaseapp.com", 
-                             projectId: "grid-walker-project",
-                             appId: "grid walker project"
+                             projectId: "grid-walker-project", 
+                             appId: "grid walker project" 
                            };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
+    let currentUser = null;
+    let currentUsername = "";
+
+    const userNameEl = document.getElementById("userName");
     const messageInput = document.getElementById("messageInput");
     const sendBtn = document.getElementById("sendMessage");
     const messageBox = document.getElementById("messages");
     const logoutBtn = document.getElementById("logoutBtn");
-    const userEmailSpan = document.getElementById("userEmail");
 
     const friendInput = document.getElementById("friendEmail");
     const friendMsg = document.getElementById("friendMsg");
     const friendList = document.getElementById("friendList");
     const addFriendBtn = document.getElementById("addFriendBtn");
 
-    let currentUser = null;
-
     onAuthStateChanged(auth, async (user) => {
-      if (user) {
-        currentUser = user;
-        userEmailSpan.textContent = user.email;
-        await setDoc(doc(db, "users", user.email), { email: user.email }, { merge: true });
-        loadMessages();
-        loadFriends();
-      } else {
+      if (!user) {
         window.location.href = "login.html";
+        return;
       }
+
+      currentUser = user;
+      const userDoc = await getDoc(doc(db, "users", user.email));
+      currentUsername = userDoc.exists() ? userDoc.data().username : user.email;
+      userNameEl.textContent = currentUsername;
+
+      loadMessages();
+      loadFriends();
     });
 
     sendBtn.onclick = async () => {
       const text = messageInput.value.trim();
       if (!text) return;
+
       await addDoc(collection(db, "messages"), {
         user: currentUser.email,
+        username: currentUsername,
         message: text,
         timestamp: Date.now()
       });
+
       messageInput.value = "";
       loadMessages();
     };
@@ -83,7 +90,7 @@
       messages.forEach(doc => sorted.push(doc.data()));
       sorted.sort((a, b) => b.timestamp - a.timestamp);
       messageBox.innerHTML = sorted.map(m =>
-        `<div class="feedback-item"><strong>@${m.user}:</strong><br>${m.message}</div>`
+        `<div class="feedback-item"><strong>@${m.username}:</strong><br>${m.message}</div>`
       ).join("");
     }
 
