--- a/register.html
+++ b/register.html
@@ -11,6 +11,7 @@
     <input type="text" id="username" placeholder="Username" />
     <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Password" />
+    <input type="file" id="profilePic" accept="image/*" />
     <button id="registerBtn">Register</button>
     <p id="message"></p>
     <p>Already have an account? <a href="login.html">Login</a></p>
@@ -20,39 +21,52 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
     import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
-    const firebaseConfig = { apiKey: "AIzaSyBiNKDXds9IWjFAwSbJaNN8Zd37Wujk5Kc", 
-                             authDomain: "grid-walker-project.firebaseapp.com", 
-                             projectId: "grid-walker-project", 
-                             appId: "grid walker project" 
-                           };
+    const firebaseConfig = {
+      apiKey: "AIzaSyBiNKDXds9IWjFAwSbJaNN8Zd37Wujk5Kc",
+      authDomain: "grid-walker-project.firebaseapp.com",
+      projectId: "grid-walker-project",
+      appId: "grid walker project"
+    };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
+    const storage = getStorage(app);
 
     document.getElementById("registerBtn").onclick = async () => {
       const username = document.getElementById("username").value.trim();
-      const email = document.getElementById("email").value;
+      const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value;
+      const profilePic = document.getElementById("profilePic").files[0];
       const message = document.getElementById("message");
 
       if (!username || !email || !password) {
-        message.textContent = "❌ Please fill all fields.";
+        message.textContent = "❌ Please fill in all fields.";
         return;
       }
 
       try {
-        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        const userCred = await createUserWithEmailAndPassword(auth, email, password);
+        let photoURL = "";
+
+        if (profilePic) {
+          const storageRef = ref(storage, `profile_pics/${email}`);
+          await uploadBytes(storageRef, profilePic);
+          photoURL = await getDownloadURL(storageRef);
+        }
+
         await setDoc(doc(db, "users", email), {
           email,
-          username
+          username,
+          photoURL
         });
 
         message.textContent = "✅ Registered successfully!";
         window.location.href = "index.html";
-      } catch (error) {
-        message.textContent = "❌ " + error.message;
+      } catch (err) {
+        message.textContent = "❌ " + err.message;
       }
     };
   </script>
